# whackamite

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  bootstrap  cleanup  configure.ac
include/: config.h.in
m4/: opencv.m4
src/: .gitignore  Makefile.am  main.cpp
